--- a/src/pages/css/MyPage.css
+++ b/src/pages/css/MyPage.css
@@ -1,6 +1,41 @@
-.search-container {
+.booking {
   max-width: 600px;
   margin: auto;
   padding: 20px;
+  background-color: #fffbe6; /* 연한 노란색 배경 */
+}
+
+.booking > table {
+  margin: auto;
+  text-align: center;
+  border: 1px solid;
+  background-color: #fffbe6; /* 연한 노란색 배경 */
+}
+
+.favorites {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  background-color: #fffbe6; /* 연한 노란색 배경 */
+}
+
+.favorites > table {
+  margin: auto;
+  text-align: center;
+  border: 1px solid;
+  background-color: #fffbe6; /* 연한 노란색 배경 */
+}
+
+.reviews {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  background-color: #fffbe6; /* 연한 노란색 배경 */
+}
+
+.reviews > table {
+  margin: auto;
+  text-align: center;
+  border: 1px solid;
   background-color: #fffbe6; /* 연한 노란색 배경 */
 }
