--- a/src/pages/css/ShopPage.css
+++ b/src/pages/css/ShopPage.css
@@ -2,14 +2,23 @@
   max-width: 600px;
   margin: auto;
   padding: 20px;
-  background-color: #fffbe6; /* 연한 노란색 배경 */
+  background-color: white; /* 연한 노란색 배경 */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); /* 그림자 추가 */
 }
 
+.review {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  background-color: white; /* 연한 노란색 배경 */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); /* 그림자 추가 */
+}
 .booking {
   max-width: 600px;
   margin: auto;
   padding: 20px;
-  background-color: #fffbe6; /* 연한 노란색 배경 */
+  background-color: white; /* 연한 노란색 배경 */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); /* 그림자 추가 */
 
 }
 
@@ -26,11 +35,45 @@
   margin-left: 10px;
 }
 
+.review-form{
+  background-color: white; /* 연한 노란색 배경 */
+}
+
 .reviews {
-  max-width: 600px;
-  margin: auto;
-  padding: 20px;
-  background-color: #fffbe6; /* 연한 노란색 배경 */
+  background-color: white; /* 연한 노란색 배경 */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); /* 그림자 추가 */
+  padding: 20px; /* 테이블 주변 패딩 */
+  border-radius: 10px; /* 동글동글한 모서리 */
+  overflow: hidden; /* 모서리를 동글동글하게 유지 */
+  margin-top: -10px;
+}
+
+table {
+  width: 100%; /* 테이블 너비 전체 사용 */
+  border-spacing: 0; /* 셀 사이의 간격 제거 */
+  border-collapse: collapse; /* 보더 겹치기 */
+  border-radius: 10px; /* 동글동글한 모서리 */
+  overflow: hidden; /* 모서리를 동글동글하게 유지 */
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* 그림자 효과 */
+}
+
+th, td {
+  padding: 12px 15px; /* 셀 내부 패딩 */
+  text-align: left; /* 텍스트 왼쪽 정렬 */
+  background-color: white;
+}
+
+th {
+  font-weight: bold; /* 글씨 굵게 */
+  background-color: #f8e68e;
+}
+
+th:nth-child(1), td:nth-child(1) {
+  width: 20%; /* 회원 번호 열 너비 */
+}
+
+th:nth-child(2), td:nth-child(2) {
+  width: 80%; /* 리뷰 내용 열 너비 */
 }
 
 .reviews > table {
@@ -48,3 +91,32 @@
   padding: 10px;
   margin-top: 10px;
 }
+
+
+/* 리뷰 텍스트 영역 스타일링 */
+.review-textarea {
+  flex: 1; /* 사용 가능한 공간을 모두 차지 */
+  height: 20px; /* 최소 높이 설정 */
+  padding: 10px;
+  margin: -10px 10px 10px 0; /* 하단에 여백 */
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  resize: none; /* 크기 조정 비활성화 */
+  width: 100%; /* 전체 너비 사용 */
+}
+
+/* 제출 버튼 스타일 */
+.submit-button {
+  background-color: #d1b000;
+  color: white;
+  border: none;
+  margin: -10px 5px; /* 하단에 여백 */
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px; /* 버튼의 글자 크기를 조금 더 크게 설정 */
+  cursor: pointer; /* 마우스 오버시 커서 변경 */
+  width: auto; /* 자동 너비 설정 */
+  height: 42px;
+}
+
+
